add favicon and api link

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -20,6 +20,12 @@
                     <i class="fas fa-tasks"></i>
                     TodoMaster
                 </a>
+                <div>
+                    <a th:href="@{${apiHref}}" class="btn btn-outline-primary">
+                        <i class="fa-solid fa-code"></i>
+                        API
+                    </a>
+                </div>
             </div>
         </nav>
     </body>
